# fcis

./: .gitignore  README.md  package.json  test-weather.js  weather.js
go/: README.md  go.mod  main.go  main_test.go
java/: README.md  build.gradle  settings.gradle
java/src/main/java/: CMS.java
java/src/test/java/: CMSTest.java
node/: README.md  axios_stub.js  cms.js  fs_stub.js  package.json  test-cms.js
python/: README.md  cms.py  cms_test.py
ruby/: README.md  cms.rb  test_cms.rb
rust/: Cargo.toml  README.md
rust/src/: main.rs
