[package]
name = "fcis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = {version= "1.0.145", features=["derive"] }
chrono = "0.4.22"

[dev-dependencies]
serial_test = "*"



